# POSELET

./: CMakeLists.txt  README.md  main.cpp
include/: gil_imdebug.h  poselet_api.h
src/: classifier.h  config.cpp  config.h  hypothesis.h  image2hits.cpp  image2hits.h  image_pyramid.h  model.h  poselet.h  poselet_detector.cpp  poselet_detector.h  poselet_hit.h
util/: logging.cpp  logging.h  resultwriter.cpp  resultwriter.h  util.cpp  util.h
